--- a/welcome.css
+++ b/welcome.css
@@ -4,18 +4,18 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #fff;
+            background-color: #000000;
         }
         .container {
             text-align: center;
         }
         .logo img {
-            max-width: 150px;
-            height: auto;
+            max-width: 200px;
+            height: 200px;
         }
         .video-container {
-            width: 300px;
-            height: 200px;
+            width: 900px;
+            height: 700px;
             margin-top: 20px;
             cursor: pointer;
             border-radius: 5px;
