--- a/welcome.css
+++ b/welcome.css
@@ -27,15 +27,16 @@
         }
         .click-text {
             position: absolute;
-            bottom: 10px;
+            bottom: 20px;
             left: 50%;
             transform: translateX(-50%);
             background-color: rgba(0, 0, 0, 0.6);
             color: red;
-            padding: 8px 15px;
+            font-size: 24px;
+            padding: 12px 20px;
             font-size: 16px;
             font-weight: bold;
             border-radius: 5px;
-            font-family: Arial, sans-serif;
+            font-family: Bebas Neue, sans-serif;
         }
 
