--- a/post2.css
+++ b/post2.css
@@ -68,6 +68,11 @@ body {
 .post:hover {
     background-color: #e1e1e1;
 }
+a {
+    text-decoration: none;
+    color: inherit;
+    display: block; /* Makes the whole block clickable */
+}
 .social-media {
     background-color: #000;
     padding: 10px;
