--- a/author.css
+++ b/author.css
@@ -51,6 +51,7 @@ nav a:hover {
     background-color: #000;
     padding: 10px;
     margin-top: 20px;
+    text-align: center;
 }
 .social-media a {
     color: white;
