--- a/pictures.css
+++ b/pictures.css
@@ -76,6 +76,7 @@ h1 {
     background-color: #000;
     padding: 10px;
     margin-top: 20px;
+    text-align: center;
 }
 .social-media a {
     color: white;
