--- a/poll.css
+++ b/poll.css
@@ -12,6 +12,25 @@ html, body {
     padding: 20px 0;
     font-size: 2em;
     font-weight: bold;
+    position: relative;
+}
+
+.header .logo {
+    display: none;
+    width: 200px; /* Adjust size as needed */
+    height: auto;
+}
+
+.header .logo-link {
+    display: inline-block;
+}
+
+.header:hover .header-text {
+    display: none;
+}
+
+.header:hover .logo {
+    display: inline-block;
 }
 .nav {
     display: flex;
